Fixed alignment of the responses
Fixed alignment of the responses

--- a/resources/dynamic/default.css
+++ b/resources/dynamic/default.css
@@ -162,6 +162,7 @@
         border: {%= borderThickness %} {%= borderStyle %} rgb({%= borderColour %});
     {% EndIf %}
     margin: {%= responseMargin %};
+    display: inline-block;
 }
 
 #adc_{%= CurrentADC.InstanceId %} .responseItem,
