--- a/resources/static/styles.css
+++ b/resources/static/styles.css
@@ -45,7 +45,7 @@ html {
 }
 
 .adc-imageCounter .responseItem {
-    float: left;
+    /*float: left;*/
     position: relative;
 }
 
